2009-01-06  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* librsvg-2.0-uninstalled.pc.in:
	* librsvg-2.0.pc.in: Indicate in the .pc file whether svgz and css
	support is available. Bug #564616.

2008-12-15  Christian Persch  <chpe@gnome.org>

	* rsvg-base.c: (rsvg_handle_get_position_sub): Return TRUE on success.
	Bug #564522.

2008-12-12  Christian Persch  <chpe@gnome.org>

	* librsvg-features.h.in: Add version check macro. Bug #564226.

2008-11-27  Robert Staudinger  <robsta@gnome.org>

	* doc/rsvg-sections.txt: New API rsvg_handle_get_position_sub(), gets
	the offset of an SVG element.
	* librsvg.def:
	* rsvg-base.c (rsvg_handle_get_position_sub):
	* rsvg-dimensions.c (main):
	* rsvg.h: ditto.

2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* rsvg-cairo-render.h: Feature request: rsvg_handle_get_dimensions_sub()
	(#555682). Patches from Hagen Schink (troja84@gmail.com) and 
	Robert Staudinger (robert.staudinger@gmail.com)
	* librsvg.def: 
	* rsvg-private.h:
	* ChangeLog:
	* rsvg-structure.c:
	* rsvg-base.c:
	* rsvg-css.c:
	* rsvg.h:
	* rsvg-dimensions.c:
	* Makefile.am:
	* rsvg-cairo-render.c:
	* rsvg-gobject.c: ditto
	
2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>
	
	* gdk-pixbuf-loader/Makefile.am: -I flag-ordering problem breaks build
	if system already has lib installed (#558040). Patch from 
	dmacks@netspace.org
	* Makefile.am: ditto

2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* Makefile.am: Stray Makefile variables (#558039). Patches from
	dmacks@netspace.org
	* rsvg-base.c:
	* gdk-pixbuf-loader/Makefile.am:
	* gtk-engine/Makefile.am: ditto
	
2008-11-22  Dominic Lachowicz  <domlachowicz@gmail.com>

	* gtk-engine/svg-rc-style.c: Remove deprecated GLib symbols (#560444).
	Patch by Luis Menina (liberforce@freeside.fr)
	
2008-11-05  Kjartan Maraas  <kmaraas@gnome.org>

	* rsvg-private.h: Use G_STRFUNC as suggested by Christian Persch.

2008-11-05  Kjartan Maraas  <kmaraas@gnome.org>
