@@ -11,9 +11,15 @@
    (LIBRSVG_MAJOR_VERSION == (major) && LIBRSVG_MINOR_VERSION > (minor)) || \
    (LIBRSVG_MAJOR_VERSION == (major) && LIBRSVG_MINOR_VERSION == (minor) && LIBRSVG_MICRO_VERSION >= (micro)))
 
+#define LIBRSVG_HAVE_SVGZ  (@LIBRSVG_HAVE_SVGZ@)
+#define LIBRSVG_HAVE_CSS   (@LIBRSVG_HAVE_CSS@)
+
+#define LIBRSVG_CHECK_FEATURE(FEATURE) (defined(LIBRSVG_HAVE_##FEATURE) && LIBRSVG_HAVE_##FEATURE)
+
 extern const unsigned int librsvg_major_version, librsvg_minor_version, librsvg_micro_version;
 extern const char *librsvg_version;
 
 void librsvg_preinit(void *app, void *modinfo);
 void librsvg_postinit(void *app, void *modinfo);
+
 #endif
